add outlines documentation to sweep.yml

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -32,7 +32,8 @@ blocked_dirs: []
 #
 # docs:
 #   - PyGitHub: ["https://pygithub.readthedocs.io/en/latest/", "We use pygithub to interact with the GitHub API"]
-docs: []
+docs:
+  - Outlines: ["https://github.com/outlines-dev/outlines", "We use Outlines for neural text generation"]
 
 # Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
 sandbox:
