--- a/sweep.yaml
+++ b/sweep.yaml
@@ -34,6 +34,7 @@ blocked_dirs: []
 #   - PyGitHub: ["https://pygithub.readthedocs.io/en/latest/", "We use pygithub to interact with the GitHub API"]
 docs:
   - Outlines: ["https://github.com/outlines-dev/outlines", "We use Outlines for neural text generation"]
+  - Finch: ["https://finch-1.gitbook.io/finch/", "We use Finch for ..."]
 
 # Sandbox executes commands in a sandboxed environment to validate code changes after every edit to guarantee pristine code. For more details, see the [Sandbox](./sandbox) page.
 sandbox:
